--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -76,5 +76,5 @@
 }
 
 .form_input {
-  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0;
+  @apply w-full flex rounded-lg my-3 p-3 text-sm text-gray-500 outline-0;
 }
